** New: Debug output now includes the X, Y, Z location of the trigger unit when combat started.
* Textures
** New: New system added which engages after initial caching of Textures. This handles all Texture Loading during game play.

Unit Tracking
* New: When removing units from the tracking system, they will also be removed from the Ignore List to prevent Memory leaking over time.

Infernal Dawn
* Maelforge - Dragon Eggs
** New: This encounter should now trigger.
** New: Added trigger for Phase Two (Magma Cannons)
** New: Added trigger for Final Phase (Dragon Eggs)
* Maelforge - Final
** New: This encounter should now trigger.
** New: Added Personal Alert, Mechanic Spy and Timer for Hellfire.
** New: Added Personal Alert for Earthen Fissure.
** New: Added Personal Alert for Fiery Fissure.

Primeval Feast
* Grandmaster Atrophinius
** New: Added Alert for Song of Anguish cast start.
** New: Added Mechanic Spy for Song of Anguish
* Swarmlord Khargroth
** New: Added Enrage Timer.
** New: Added Personal Alert for Acidic Vapors warning and duration with countdown.
** New: Added Minimum CD Timer for Poison Spray.
** New: Added Personal Alert for Chase mechanic.
** New: Added Mechanic Spy for Chase mechanic.
** New: Added Mechanic Spy for Acidic Vapors.
** New: Added Minimum CD Timer for Acidic Vapors
** New: Added Timer for vanish phase transition. (Experimental 30 second duration)
** New: Added Phase Tracking for disaperance phases at 85%, 55% and 35% and associated stop triggers.
** New: Added Phase Tracking for final phase at 30%.
* Alltha the Reaper
** New: Added Mechanic Spy for Toxic Spore.

River of Souls
* Alsbeth the Discordant
** Change: Alsbeth now uses her Raid ID for triggering this encounter.

Translations
* French updates
* Russian updates and fixes.
* German partial updates.
----
v1.1.7

Unit Tracking
* Change: Moved Percent triggers in to a unified location within Unit:Update()

System