@@ -456,12 +456,12 @@ function EC:Start()
 	self.Ereetu.Triggers.Shard = KBM.Trigger:Create(self.Lang.Ability.Shard[KBM.Lang], "cast", self.Ereetu)
 	self.Ereetu.Triggers.Shard:AddTimer(self.Ereetu.TimersRef.Shard)
 	
-	self.Szath.Triggers.Blood = KBM.Trigger:Create("B04039E99174644055", "playerIDBuff", self.Szath)
+	self.Szath.Triggers.Blood = KBM.Trigger:Create("B04039E9917464055", "playerIDBuff", self.Szath)
 	self.Szath.Triggers.Blood:AddAlert(self.Szath.AlertsRef.Blood)
 	self.Szath.Triggers.Blood:AddTimer(self.Szath.TimersRef.Blood)
 	self.Szath.Triggers.Blood:AddSpy(self.Szath.MechRef.Blood)
-	self.Szath.Triggers.BloodRem = KBM.Trigger:Create("B04039E99174644055", "playerIDBuffRemove", self.Szath)
-	self.Szath.Triggers.Blood:AddStop(self.Szath.MechRef.Blood)
+	self.Szath.Triggers.BloodRem = KBM.Trigger:Create("B04039E9917464055", "playerIDBuffRemove", self.Szath)
+	self.Szath.Triggers.BloodRem:AddStop(self.Szath.MechRef.Blood)
 
 	self.Nahoth.Triggers.Wounds = KBM.Trigger:Create(self.Lang.Debuff.Wounds[KBM.Lang], "playerBuff", self.Nahoth)
 	self.Nahoth.Triggers.Wounds:AddTimer(self.Nahoth.TimersRef.Wounds)
